# ai-steward-wiki

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DOLT_REMOTE.md  Makefile  README.md  manifest  pyproject.toml  tbq8da9skvnn9ggmpdsfjvqagedvuq0k.darc
.beads/: metadata.json
.beads/hooks/: pre-commit
alembic/audit/: alembic.ini  env.py
alembic/jobs/: alembic.ini  env.py
alembic/sessions/: alembic.ini  env.py
deploy/prod/: .env.example
deploy/staging/: .env.example
deploy/systemd/: README.md  aisw-bot.service  aisw-bot.slice  aisw-stt.slice  aisw-sysusers.conf
docs/: development-plan.xml  knowledge-graph.xml  requirements.xml  technology.xml  verification-plan.xml
docs/Spec-WIKI/: CLAUDE.md  backlog.md  index.md  log.md  queue.md
docs/adr/: ADR-001-claude-config-dir-env-resolved.md  ADR-002-faster-whisper-core-dependency.md  ADR-003-inbox-wiki-router-invocation.md  ADR-004-inbox-wiki-route-ingest.md  ADR-005-inbox-wiki-route-confirm.md  ADR-006-inbox-wiki-reminder-cron-bridge.md  ADR-007-inbox-wiki-digest-job.md  ADR-008-dev-life-service-separation.md  ADR-009-claude-config-dir-single-field.md  ADR-010-per-user-uid-isolation-deferred.md  ADR-024-digest-presentation.md  ADR-025-digest-interactive-surface.md  ADR-026-digest-section-toggles.md  ADR-027-prune-and-rename-domains.md  ADR-028-l2-dedup-per-kind-ttl.md  (+9 more)
docs/reports/: 2026-05-14-audit.md  (+45 more)
prompts/: check_in.md  classifier.md  cron_user.md  digest.md  digest_expand.md  domain-default.md  domain-finance.md  domain-health.md  domain-medical.md  inbox.md  recurrence.md  schema-gen.md  time-parse.md  wiki.md
scripts/: backfill_managed_zone.py  check_classifier_regress_stamp.py  classifier_eval.py  classifier_regress.py  lint_invariants.py  lint_onboarding.py  lint_pii_coverage.py  lint_templates.py  total_test.sh
templates/: _default.md  budget.md  career.md  cooking.md  family.md  health-lite.md  health.md  help.ru.md  hobby.md  home.md  investment.md  manual.ru.md  medical.md  onboarding-intro.ru.md  recipes.md  start-known.ru.md  study.md
tests/: conftest.py  e2e_checklist.md
(+538 files in other folders)
