[project]
name = "ai-steward-wiki"
version = "0.0.1"
description = "Isolated multi-user Telegram service that turns Claude Code CLI into a personal Karpathy-style WIKI assistant."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Gennady" }]

dependencies = [
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "structlog==24.4.0",
    # deferred — declared for lock stability, used in later chunks
    "aiogram==3.15.0",
    "APScheduler==3.11.0",
    "SQLAlchemy==2.0.36",
    "greenlet==3.1.1",
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "dateparser==1.2.0",
    "watchdog==6.0.0",
    "pypdf==5.1.0",
    # voice STT (D-022) — core dep: voice is a primary MVP feature. See ADR-002.
    "faster-whisper==1.1.0",
    "tomli-w==1.2.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "types-dateparser==1.2.0.20240420",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_steward_wiki"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "PT",            # pytest-style
    "RUF",
]
ignore = ["E501"]    # line-length covered by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "RUF001", "RUF003"]
"scripts/**" = ["RUF001"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "faster_whisper.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-q --strict-markers"
